--- a/source/css/base.styl
+++ b/source/css/base.styl
@@ -32,6 +32,9 @@ hr.small
   border-width 4px
   border-color white
 
+.fa-stack-1x, .fa-stack-2x
+  bottom 0
+
 .navbar-custom
   position absolute
   top 0
