--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -1,59 +1,79 @@
 <head>
 
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
     <!--Description-->
-    <% if (page.description){ %>
-        <meta name="description" content="<%= page.description %>">
-    <% } else if (config.description){ %>
-        <meta name="description" content="<%= config.description %>">
-    <% } else if (page.excerpt){ %>
-        <meta name="description" content="<%= strip_html(page.excerpt).replace(/^\s*/, '').replace(/\s*$/, '') %>">
-    <% } else if (page.content){ %>
-        <meta name="description" content="<%= strip_html(page.content).replace(/^\s*/, '').replace(/\s*$/, '').substring(0, 150) %>">
+
+    <%
+    var description = '';
+
+    if (page.description) {
+        description = page.description;
+    } else if (config.description) {
+        description = config.description;
+    } else if (page.excerpt) {
+        description = strip_html(page.excerpt).replace(/^\s*/, '').replace(/\s*$/, '');
+    } else if (page.content) {
+        description = strip_html(page.content).replace(/^\s*/, '').replace(/\s*$/, '').substring(0, 150);
+    }
+    %>
+
+    <% if (description) { %>
+        <meta name="description" content="<%= description %>"/>
     <% } %>
 
     <!--Author-->
-    <% if (config.author){ %>
-        <meta name="author" content="<%= config.author %>">
+    <% if (config.author) { %>
+        <meta name="author" content="<%= config.author %>"/>
     <% } %>
 
     <!--Open Graph Title-->
-    <% if (page.title){ %>
+    <% if (page.title) { %>
         <meta property="og:title" content="<%= page.title %>"/>
     <% } else { %>
         <meta property="og:title" content="<%= config.title %>"/>
     <% } %>
 
     <!--Open Graph Description-->
-    <% if (page.description){ %>
-        <meta property="og:description" content="<%= page.description %>" />
-    <% } else if (config.description) { %>
-        <meta property="og:description" content="<%= config.description %>" />
+    <% if (description) { %>
+        <meta property="og:description" content="<%= description %>"/>
     <% } %>
 
     <!--Open Graph Site Name-->
-    <meta property="og:site_name" content="<%= config.title %>"/>
+        <meta property="og:site_name" content="<%= config.title %>"/>
 
     <!--Type page-->
     <% if(page.title) { %>
-        <meta property="og:type" content="article" />
+        <meta property="og:type" content="article"/>
     <% } else { %>
-        <meta property="og:type" content="website" />
+        <meta property="og:type" content="website"/>
     <% } %>
 
     <!--Page Cover-->
-    <% if (page.share_cover) { %>
-        <meta property="og:image" content="<%= config.url %><%= page.share_cover %>" />
-    <% } else if (config.cover) { %>
-        <meta property="og:image" content="<%= config.url %><%= config.cover %>"/>
+    <%
+        var image = '';
+        if (page.share_cover) {
+            image = page.share_cover;
+        } else if (config.cover) {
+            image = config.cover;
+        } else if (theme.index_cover) {
+            image = theme.index_cover;
+        }
+    %>
+    <% if (image) { %>
+        <meta property="og:image" content="<%= config.url %><%= image %>"/>
     <% } %>
 
-        <meta name="twitter:card" content="summary" />
+        <meta name="twitter:card" content="summary_large_image"/>
+
     <% if(theme.twitter_handle) { %>
-        <meta name="twitter:site" content="<%= theme.twitter_handle %>>" />
+        <meta name="twitter:site" content="@<%= theme.twitter_handle %>"/>
+    <% } %>
+
+    <% if(image) { %>
+        <meta name="twitter:image" content="<%= config.url %><%= image %>"/>
     <% } %>
 
     <!-- Title -->
@@ -78,9 +98,9 @@
     <%- css('css/style.css') %>
 
     <!-- Custom Fonts -->
-    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="//fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
-    <link href="//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css">
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
+    <link href="//fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css"/>
+    <link href="//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css"/>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -90,14 +110,14 @@
     <![endif]-->
 
     <!-- Gallery -->
-    <link href="//cdnjs.cloudflare.com/ajax/libs/featherlight/1.3.5/featherlight.min.css" type="text/css" rel="stylesheet" />
+    <link href="//cdnjs.cloudflare.com/ajax/libs/featherlight/1.3.5/featherlight.min.css" type="text/css" rel="stylesheet"/>
 
     <!-- Google Analytics -->
     <%- partial('google-analytics') %>
 
     <!-- favicon -->
-    <% if (theme.favicon){ %>
-    <link rel="icon" href="<%- theme.favicon %>">
+    <% if (theme.favicon) { %>
+    <link rel="icon" href="<%- theme.favicon %>"/>
     <% } %>
-	
+
 </head>
