--- a/layout/index.ejs
+++ b/layout/index.ejs
@@ -5,7 +5,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                 <div class="site-heading">
-                    <h1><%- config.title %></h1>
+                    <h1><%- theme.cover_title || config.title || "" %></h1>
                     <hr class="small">
                     <span class="subheading"><%- config.subtitle %></span>
                 </div>
