--- a/layout/_partial/footer.ejs
+++ b/layout/_partial/footer.ejs
@@ -28,6 +28,17 @@
                         </li>
                     <% } %>
 
+                    <% if (theme.instagram_url) { %>
+                        <li>
+                            <a href="<%- theme.instagram_url%>" target="_blank">
+                                <span class="fa-stack fa-lg">
+                                    <i class="fa fa-circle fa-stack-2x"></i>
+                                    <i class="fa fa-instagram fa-stack-1x fa-inverse"></i>
+                                </span>
+                            </a>
+                        </li>
+                    <% } %>
+
                     <% if (theme.github_url) { %>
                         <li>
                             <a href="<%- theme.github_url%>" target="_blank">
