--- a/source/css/base.styl
+++ b/source/css/base.styl
@@ -115,7 +115,7 @@ hr.small
   margin-bottom 50px
   .site-heading, .post-heading, .page-heading
     padding 100px 0 50px
-    color white
+    color black
     @media only screen and (min-width: 768px)
       padding 150px 0
     &.archives
